# twirl_compiler_cli

./: .bazelrc  .bazelversion  .gitignore  .mvn_settings.travis.xml  .travis.yml  BUILD.bazel  README.md  WORKSPACE  test_workspace.bzl  twirl_compiler_cli_maven_install.json  twirl_compiler_cli_test_maven_install.json  version_from_env.bzl  workspace.bzl
.github/workflows/: ci.yml
scala/: BUILD.bazel
scripts/: format.sh  gen-deps.sh  publish.sh
test/: BUILD.bazel  Fruit.scala  Person.scala  StrangeTxtFormatter.scala  TwirlCompilerTest.scala  reproducibility_test.sh  run_all_tests.sh  twirl_compiler_bazel_e2e_test.sh
test/twirl-templates/twirl/com/foo/views/: addImports.scala.txt
tools/: bazel
twirl-compiler/: BUILD.bazel  pom.template.xml
twirl-compiler/src/main/scala/: CommandLineTwirlTemplateCompiler.scala
