load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")

buildifier(
    name = "buildifier",
)

buildifier_test(
    name = "buildifier_test",
    size = "small",
    timeout = "short",
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    workspace = "//:WORKSPACE",
)
