# Borrowed from lucidsoftware/rules_twirl but using //twirl-compiler for the compiler cli

load("@rules_scala_annex//rules:scala.bzl", "scala_test")
load("@io_bazel_rules_twirl//twirl:twirl.bzl", "twirl_templates")

twirl_templates(
  name = "twirl-test-templates-basic",
  visibility = ["//visibility:public"],
  source_directory = "twirl-templates",
  srcs = [
    "twirl-templates/twirl/com/foo/views/hello.scala.html",
    "twirl-templates/twirl/com/foo/views/hello.scala.txt",
    "twirl-templates/twirl/com/foo/views/hello.scala.xml",
    "twirl-templates/twirl/com/foo/views/hello.scala.js",
  ],
  twirl_compiler = "//twirl-compiler"
)

twirl_templates(
  name = "twirl-test-templates-additional-imports",
  visibility = ["//visibility:public"],
  source_directory = "twirl-templates",
  srcs = [
    "twirl-templates/twirl/com/foo/views/addImports.scala.txt",
  ],
  additional_imports = ["rulestwirl.test.Person", "rulestwirl.test.Fruit"],
  twirl_compiler = "//twirl-compiler"
)

twirl_templates(
  name = "twirl-test-templates-custom-formatter",
  visibility = ["//visibility:public"],
  source_directory = "twirl-templates",
  srcs = [
    "twirl-templates/twirl/com/foo/views/customFormatter.scala.txt",
  ],
  additional_imports = ["rulestwirl.test.Person"],
  template_formats = {
    "txt": "rulestwirl.test.StrangeTxtFormat"
  },
  twirl_compiler = "//twirl-compiler"
)

scala_test(
  name = "twirl-compiler-test",
  srcs = [
    "TwirlCompilerTest.scala",
    "Person.scala",
    "Fruit.scala",
    "StrangeTxtFormatter.scala",
    ":twirl-test-templates-basic",
    ":twirl-test-templates-additional-imports",
    ":twirl-test-templates-custom-formatter",
  ],
  deps = [
    "@twirl_compiler_cli_test_maven//:com_typesafe_play_twirl_api_2_12",
    "@twirl_compiler_cli_test_maven//:org_specs2_specs2_common_2_12",
    "@twirl_compiler_cli_test_maven//:org_specs2_specs2_core_2_12",
    "@twirl_compiler_cli_test_maven//:org_specs2_specs2_matcher_2_12",
  ],
)
