load("@rules_scala_annex//rules:scala.bzl", "scala_binary")
load("@bazel-common//tools/maven:pom_file.bzl", "pom_file")
load("@compiler-cli-version//:version.bzl", "VERSION")

scala_binary(
  name = "twirl-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  scalacopts = ["-Ywarn-unused-import"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  deps = [
    "@rules_scala_annex//src/main/scala/higherkindness/rules_scala/common/worker:worker",
    "@twirl_compiler_cli_maven//:com_github_scopt_scopt_2_12",
    "@twirl_compiler_cli_maven//:com_typesafe_play_twirl_compiler_2_12",
    "@twirl_compiler_cli_maven//:org_scala_lang_modules_scala_parser_combinators_2_12",
  ],
  deps_used_whitelist = [
    "@twirl_compiler_cli_maven//:org_scala_lang_modules_scala_parser_combinators_2_12",
  ],
  runtime_deps = [
    "@twirl_compiler_cli_maven//:org_scala_lang_scala_reflect",
  ],
)

compiler_cli_version = VERSION

pom_file(
  name = "pom",
  targets = [":twirl-compiler"],
  template_file = "pom.template.xml",
  substitutions = {"VERSION": compiler_cli_version}
)
