load("@rules_scala_annex//rules:scala.bzl", "scala_binary")
load("@bazel-common//tools/maven:pom_file.bzl", "pom_file")
load("@env_vars//:env_vars.bzl", "COMPILER_CLI_ARTIFACT_ID", "COMPILER_CLI_VERSION")

scala_binary(
  name = "twirl-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  scalacopts = ["-Ywarn-unused-import"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  deps = [
    "@rules_scala_annex//src/main/scala/higherkindness/rules_scala/common/worker:worker",
    "@twirl_compiler_cli_maven//:com_github_scopt_scopt_2_12",
    "@twirl_compiler_cli_maven//:com_typesafe_play_twirl_compiler_2_12",
    "@twirl_compiler_cli_maven//:org_scala_lang_modules_scala_parser_combinators_2_12",
  ],
  deps_used_whitelist = [
    "@twirl_compiler_cli_maven//:org_scala_lang_modules_scala_parser_combinators_2_12",
  ],
  runtime_deps = [
    "@twirl_compiler_cli_maven//:org_scala_lang_scala_reflect",
  ],
)

artifact_id = COMPILER_CLI_ARTIFACT_ID if len(COMPILER_CLI_ARTIFACT_ID) > 0 else "twirl_compiler_cli"
version = COMPILER_CLI_VERSION if len(COMPILER_CLI_VERSION) > 0 else "non-published-SNAPSHOT"

pom_file(
  name = "pom",
  targets = [":twirl-compiler"],
  template_file = "pom.template.xml",
  substitutions = {
    "ARTIFACT_ID": artifact_id,
    "VERSION": version
    }
)
