load("@rules_scala_annex//rules:scala.bzl", "scala_library")
load("@graknlabs_bazel_distribution//maven:rules.bzl", "assemble_maven", "deploy_maven")
load("@env_vars//:env_vars.bzl", "COMPILER_CLI_ARTIFACT_ID")

artifact_id = COMPILER_CLI_ARTIFACT_ID if (len(COMPILER_CLI_ARTIFACT_ID) > 0) else "twirl_compiler_cli"

scala_library(
    name = "twirl-compiler-lib",
    srcs = glob(["src/main/**/*.scala"]),
    tags = ["maven_coordinates=com.lucidchart:" + artifact_id + ":{pom_version}"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_scala_annex//src/main/scala/higherkindness/rules_scala/common/worker",
        "@twirl_compiler_cli_maven//:com_github_scopt_scopt_3",
        "@twirl_compiler_cli_maven//:org_playframework_twirl_twirl_compiler_3",
    ],
)

java_binary(
    name = "twirl-compiler",
    main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
    visibility = ["//visibility:public"],
    runtime_deps = [":twirl-compiler-lib"],
)
###

assemble_maven(
    name = "assemble-maven",
    developers = {
        "1": [
            "name=James Judd",
            "email=james@lucidchart.com",
            "organization=Lucid Software, Inc.",
        ],
        "2": [
            "name=Sergio Rodriguez Orellana",
            "email=sergio@lucidchart.com",
            "organization=Lucid Software, Inc.",
        ],
    },
    license = "apache",
    package = "{maven_packages}",
    project_description = "A CLI for the Twirl compiler",
    project_name = "Twirl Compiler CLI",
    project_url = "https://github.com/lucidsoftware/twirl_compiler_cli",
    scm_url = "https://github.com/lucidsoftware/twirl_compiler_cli.git",
    target = ":twirl-compiler-lib",
)

deploy_maven(
    name = "deploy-maven",
    release = "https://oss.sonatype.org/service/local/staging/deploy/maven2",
    snapshot = "https://oss.sonatype.org/content/repositories/snapshots",
    target = ":assemble-maven",
)
